--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+    <section class="hero"></section>
     <main class="content">
         <!--Main Section-->
             <section id="search-engine-optimization" class="search-engine-optimization">
