--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
     </header>
-    <section class="hero"></section>
+    <img src="./assets/images/digital-marketing-meeting.jpg" class="hero">
     <main class="content">
         <!--Main Section-->
             <section id="search-engine-optimization" class="search-engine-optimization">
